--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website",
+  "homepage": "https://korih.github.io/agrobots-website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,6 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "activationEvents": "gh-pages -d build",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
