--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
-  "homepage": "https://korih.github.io/agrobots-website/",
   "version": "0.1.0",
+  "homepage": "https://korih.github.io/agrobots-website/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "activationEvents": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.1"
   }
 }
