--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "homepage": "https://ubcagrobot.com",
+  "homepage": "https://ubcagrobot.com/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
